tests/rosetta/out/Pascal/chernicks-carmichael-numbers.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/chernicks-carmichael-numbers.pas
chernicks-carmichael-numbers.pas(34,34) Error: Identifier not found "_indexList"
chernicks-carmichael-numbers.pas(34,55) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
